--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/joelgwebber/eden3d.git"
+    "url": "git+https://github.com/joelgwebber/eden.git"
   },
   "devDependencies": {
     "babel-core": "6.9.1",
